just playing around

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,5 +3,12 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+
+  ul
+    li asd
+    li fdsafdfasf 
+  
+  p= body
+  
   body
     block content
